<resources>
    <string name="app_name">ТехЭксперт</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>

    <!-- Fill data -->
    <string name="fragment_fill_data_extra_title">Примечание</string>
    <string name="fragment_fill_data_distance">Пробег</string>
    <string name="fragment_request_distance">Введите пробег автомобиля</string>
    <string name="fragment_fill_data_trunk">Резина</string>
    <string name="fragment_request_trunk">Сведения о резине автомобиля</string>
    <string name="fragment_request_description_hint">Опишите задачу в свободной форме</string>
    <string name="fragment_request_add_photo_hint">Добавить фото\n Макс. 20 штук</string>
    <string name="profile.edit.dialog_title_profile_pick_photo">Ваше фото</string>
    <string name="send_photos">Отправить на сервер</string>
    <string name="fragment_request_save">Сохранено</string>
    <string name="next">Продолжить</string>

    <string-array name="choose_image_dialog">
        <!--<item>Выбрать из галереи</item>-->
        <item>Сделать фото</item>
    </string-array>


    <!-- login -->
    <string name="fragment_login_title">Введите свои данные</string>
    <string name="fragment_login_phone">Телефон</string>
    <string name="fragment_login_name">Логин</string>
    <string name="fragment_login_save">Сохранить</string>
    <string name="fragment_login_edit">Редактировать</string>
    <string name="fragment_login_remove">Удалить</string>
    <string name="fragment_login_toast">Ваши данные сохранены</string>


    <string name="fragment_login_alert_title">Авторизация</string>
    <string name="fragment_login_success">Добро пожаловать, %1$s</string>
    <string name="fragment_login_not_found">Не найдены данные по номеру +7%1$s</string>
    <string name="fragment_login_failed">Не удалось получить данные, попробуйте позже</string>
    <string name="fragment_login_load">Поиск в списке партнеров</string>


    <string name="ftp_client">app.tex-expert.ru</string>
    <string name="ftp_login">admin_android</string>
    <string name="ftp_password">mWg2zP27NT</string>

    <!--  Send -->
    <string name="send_file_failed">Не удалось загрузить данные</string>
    <string name="send_file_notif_failed">Не удалось отправить отчет</string>
    <string name="send_file_success">Данные успешно загружены</string>
    <string name="send_file_notif_success">Отчет успешно отправлен</string>
    <string name="send_file_no_checked">Не выбрано ни одного файла</string>
    <string name="send_file_no_phone">Вы не зарегестрированы</string>
    <string name="send_file_is_downloading">Идет отправка данных, подождите...</string>
    <string name="send_file_cancel">Прервать отправку данных?</string>
    <string name="send_file_error">Не удалось отправить данные, попробуйте позже</string>
    <string name="no_sended_file">Не отправлено</string>
    <string name="no_sended_file_half">Частично отправлен</string>
    <string name="no_send_title">Отправка данных</string>
    <string name="no_resend">Вы действительно хотите повторно отправить данные?</string>

    <!-- Bottom navigation -->
    <string name="bottom_nav_archive">Архив</string>
    <string name="bottom_nav_active">Активные</string>
    <string name="bottom_nav_new">Создать</string>

    <!-- Enter name -->
    <string name="enter_name">Фамилия Имя Отчество</string>
    <string name="enter_number">Номер автомобиля</string>

</resources>
