<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvTasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp" />

            <android.support.v7.widget.AppCompatTextView
                fontPath="fonts/PTSans-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/fragment_fill_data_extra_title"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/darker_gray" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardDescriptionTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:minHeight="173dp"
                app:cardCornerRadius="4dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etDescriptionTask"
                    fontPath="fonts/PTSans-Regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:minHeight="141dp"
                    android:gravity="top"
                    android:background="@android:color/transparent"
                    android:hint="@string/fragment_request_description_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/etFillPhotoHint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="28dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/fragment_request_add_photo_hint"
                    android:padding="40dp"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="28dp"
                    android:background="@drawable/background_add_photo"
                    android:paddingBottom="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/ivAddPhoto"
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@drawable/background_ic_photo"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_camera" />

            </FrameLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_login_save"
                android:layout_gravity="center"
                android:id="@+id/btnNext"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:background="@drawable/background_gray_stroke"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>